add: delete post route
